[package]
name = "rhai-rand"
version = "0.1.3"
edition = "2018"
authors = ["Stephen Chung", "Jay Thomas"]
description = "Random number package for Rhai"
homepage = "https://rhai.rs"
repository = "https://github.com/rhaiscript"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["scripting", "scripting-language", "embedded", "rhai", "random"]
categories = ["embedded"]

[dependencies]
rhai = { version = "1.5" }
rand = { version = "0.8", features = ["alloc"] }
rust_decimal = { version = "1.25", features = ["rand"], optional = true }

[features]
default = [ "float", "array" ]
metadata = [ "rhai/metadata" ]
float = []
array = []
decimal = [ "rhai/decimal", "rust_decimal" ]
