[package]
name = "rhai-rand"
version = "0.1.5"
edition = "2018"
resolver = "2"
authors = ["Stephen Chung", "Jay Thomas"]
description = "Random number package for Rhai"
homepage = "https://rhai.rs"
repository = "https://github.com/rhaiscript"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["scripting", "scripting-language", "embedded", "rhai", "random"]
categories = ["embedded"]

[dependencies]
rhai = { version = "1.5" }
rand = { version = "0.8", features = ["alloc"] }
rust_decimal = { version = "1.25", features = ["rand"], optional = true }
document-features = { version = "0.2", optional = true }

[build-dependencies]
rhai = { version = "1.5" }
rand = { version = "0.8", features = ["alloc"] }
rust_decimal = { version = "1.25", features = ["rand"], optional = true }
serde_json = "1.0.82"
serde = "1.0.140"

[features]
## Default features: `float` and `array`.
default = [ "float", "array" ]
## Includes functions metadata: parameter names/types, return type, doc-comments etc.
metadata = [ "rhai/metadata" ]
## Provides random floating-point number generation.
float = []
## Provides methods for Rhai arrays.
array = []
## Provides random [decimal](https://crates.io/crates/rust_decimal) number generation.
decimal = [ "rhai/decimal", "rust_decimal" ]

# NOTE: Need to manually specify `metadata` feature for local `cargo doc`.
[package.metadata.docs.rs]
features = ["document-features", "decimal", "metadata"]
